Update consultation call text and details

--- a/my-landing-page/index.html
+++ b/my-landing-page/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#pricing">Pricing</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#expertise">Expertise</a></li>
-                <li><a href="#contact" class="btn btn-primary">Book a Free Consultation</a></li>
+                <li><a href="#contact" class="btn btn-primary">Book a Discovery Call</a></li>
             </ul>
             <button class="mobile-menu-btn" aria-label="Toggle menu">
                 <span></span>
@@ -32,9 +32,9 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Fix what's broken. Build what works.</h1>
-                <p class="hero-subtitle">I help early-stage companies fix broken processes, build automated systems, and clean up their operations.</p>
+                <p class="hero-subtitle">I build operational systems for early-stage startups - the stuff that's breaking as you scale.</p>
                 <div class="hero-cta">
-                    <a href="#contact" class="btn btn-primary btn-lg">Book a Free Consultation</a>
+                    <a href="#contact" class="btn btn-primary btn-lg">Book a Discovery Call</a>
                 </div>
             </div>
         </div>
@@ -118,7 +118,7 @@
                         <h3>Tier 2: Ops &amp; Automation Sprint</h3>
                         <div class="price">$5,000 to $7,000</div>
                         <div class="price-period">one-time (30 days)</div>
-                        <p class="availability">Maximum 3 sprints per month</p>
+                        <p class="availability">Maximum 3 sprint clients per month</p>
                         <p class="pricing-desc">A focused one-month build to fix one critical operational problem. You pick the priority, I design and build the system that solves it.</p>
                     </div>
 
@@ -209,7 +209,7 @@
 
                     <div class="pricing-footer">
                         <div class="best-for">
-                            <strong>Best for:</strong> Startups with traction but no operational muscle. You're growing fast, things are breaking, and you need someone who can both design the fix and build it.
+                            <strong>Best for:</strong> Startups with traction but no operational muscle. You're growing fast, things are breaking, and you need someone who can both design the fix and build it without committing to a full-time hire.
                         </div>
                         <a href="#contact" class="btn btn-secondary">Get Started</a>
                     </div>
@@ -243,7 +243,7 @@
                                 <td>$5k to $7k one-time</td>
                                 <td>Max 3/month</td>
                                 <td>15 to 20 hrs over 30 days</td>
-                                <td>One system built end-to-end, then I'm out</td>
+                                <td>One system built end-to-end, then I hand it over to you</td>
                             </tr>
                             <tr>
                                 <td><strong>Tier 3: Fractional Ops</strong></td>
@@ -271,7 +271,7 @@
             </div>
             <div class="about-content">
                 <p>I'm Rae Schneider. I've spent 10+ years building operational systems for fast-scaling companies from $1M to $10M retail operations to regulated healthtech startups serving enterprise clients.</p>
-                <p>Most recently, I was Head of Revenue &amp; Customer Operations at Stork Club, where I:</p>
+                <p>Most recently, I was Head of Revenue &amp; Customer Operations at Stork Club, a Series A healthtech startup, where I:</p>
                 <ul class="about-highlights">
                     <li>Cut client onboarding time in half through automation and process redesign</li>
                     <li>Maintained 100% client retention and 92 NPS for 2+ years</li>
@@ -353,7 +353,7 @@
     <section id="contact" class="contact">
         <div class="container">
             <div class="contact-content">
-                <h2>Book a Free Consultation</h2>
+                <h2>Book a Discovery Call</h2>
                 <p>Not sure which tier is right for you? Let's figure it out together. No pitch, no pressure, just a conversation about what's broken and how to fix it.</p>
 
                 <!-- Calendly inline widget begin -->
