Refine pricing descriptions and expertise details

--- a/my-landing-page/index.html
+++ b/my-landing-page/index.html
@@ -81,7 +81,7 @@
                         <div class="price">$2,000 to $2,500</div>
                         <div class="price-period">/month</div>
                         <p class="availability">Limited to 5 active clients at a time</p>
-                        <p class="pricing-desc">For founders who need operational clarity but don't need hands-on execution. Weekly calls and async guidance so you stop guessing and start deciding.</p>
+                        <p class="pricing-desc">For founders who need operational clarity but don't need hands-on execution. Weekly calls and async guidance so you stop spinning your wheels and start building.</p>
                     </div>
 
                     <div class="pricing-section">
@@ -119,7 +119,7 @@
                         <div class="price">$5,000 to $7,000</div>
                         <div class="price-period">one-time (30 days)</div>
                         <p class="availability">Maximum 3 sprint clients per month</p>
-                        <p class="pricing-desc">A focused one-month build to fix one critical operational problem. You pick the priority, I design and build the system that solves it.</p>
+                        <p class="pricing-desc">A focused one-month build to fix a single critical operational problem. You pick the priority, I design and build the system that solves it.</p>
                     </div>
 
                     <div class="pricing-section">
@@ -174,7 +174,7 @@
                         <div class="price">$10,000 to $13,000</div>
                         <div class="price-period">/month</div>
                         <p class="availability">Limited to 2 clients at a time</p>
-                        <p class="pricing-desc">Part-time operational support for teams that need someone who can both think and build. I handle workflow chaos, improve systems, and keep things moving without the overhead of a full-time hire.</p>
+                        <p class="pricing-desc">Part-time operational support for teams that need someone who can both plan and build. I handle workflow chaos, improve systems, and keep things moving without the overhead of a full-time hire.</p>
                     </div>
 
                     <div class="pricing-section">
@@ -193,7 +193,7 @@
                         <h4>Scope cap</h4>
                         <ul class="pricing-features">
                             <li>10 to 15 hours per week max</li>
-                            <li>Focus areas determined monthly (we prioritize together, but I'm not doing everything)</li>
+                            <li>Focus areas determined monthly (we prioritize together)</li>
                         </ul>
                     </div>
 
@@ -339,7 +339,7 @@
         <div class="container">
             <h2 class="section-title">Expertise</h2>
             <div class="expertise-grid">
-                <div class="expertise-item">Revenue operations (pipeline design, funnel analysis, claims/billing cycles)</div>
+                <div class="expertise-item">Revenue operations (pipeline design, funnel analysis, claims/billing cycles, insurance integration)</div>
                 <div class="expertise-item">Customer operations (onboarding, implementation, retention systems)</div>
                 <div class="expertise-item">No-code automation (Airtable, Zapier, Make, PowerApps)</div>
                 <div class="expertise-item">KPI dashboards and reporting (Tableau, executive reviews, forecasting)</div>
