Update LinkedIn link in index.html

--- a/my-landing-page/index.html
+++ b/my-landing-page/index.html
@@ -281,7 +281,7 @@
                 <p>I specialize in diagnosing what's broken, building systems that fix it, and documenting everything so it doesn't break again.</p>
                 <p class="about-tools"><strong>Tools I work with daily:</strong> Airtable, Tableau, Zapier, Make, PowerApps, Excel, and AI-assisted workflows.</p>
                 <div class="about-links">
-                    <a href="#" class="btn btn-secondary">LinkedIn</a>
+                      <a href="https://www.linkedin.com/in/raeschneider88/" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">LinkedIn</a>   
                     <a href="#contact" class="btn btn-primary">Schedule a Call</a>
                 </div>
             </div>
