Insert HubSpot embed code in index.html
Added HubSpot embed code for tracking.

--- a/my-landing-page/index.html
+++ b/my-landing-page/index.html
@@ -394,5 +394,8 @@
     </footer>
 
     <script src="script.js"></script>
+    <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na3.hs-scripts.com/342929163.js"></script>
+<!-- End of HubSpot Embed Code -->
 </body>
 </html>
